--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
   </head>
 
   <body>
+  <header>
+    <div class="logo"><a href="/">logo</a></div>
+    <nav>
+      <div class="plof"><a href="prof">プロフィール</a></div>
+      <div class="post"><a href="post">投稿</a></div>
+      <div class="post-list"><a href="postlist">投稿一覧</a></div>
+      <div class="login"><a href="login">ログイン</a></div>
+    </nav>
+  </header>
     <%= yield %>
   </body>
 </html>
