--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,9 @@
   <header>
     <div class="logo"><a href="/">logo</a></div>
     <nav>
-      <div class="plof"><a href="prof">プロフィール</a></div>
-      <div class="post"><a href="post">投稿</a></div>
-      <div class="post-list"><a href="postlist">投稿一覧</a></div>
+      <div class="profile"><a href="profile">プロフィール</a></div>
+      <div class="post"><a href="posts">投稿</a></div>
+      <div class="post-list"><a href="postslist">投稿一覧</a></div>
       <div class="login"><a href="login">ログイン</a></div>
     </nav>
   </header>
